--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -51,7 +51,7 @@
 - name: Sam Eccles
   photo: Sam Eccles.jpg
   info: Determining Thermal Decomposition Pathways of PFAS
-  email: lmhendershot@eiu.edu
+  email: sceccles@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2024, EIU
   education2:
@@ -61,7 +61,7 @@
 - name: Jack Ebinger
   photo: Jack Ebinger.jpg
   info: Determining Thermal Decomposition Pathways of PFAS
-  email: mmboyd3@eiu.edu
+  email: jeebinger2@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2024, EIU
   education2:
