Updating Team Info

--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -8,6 +8,16 @@
 #  education3:
 #  education4:
 
+- name: George Kacos
+  photo: George Kacos.jpg
+  info: Determining Thermal Decomposition Pathways of PFAS
+  email: gkacos@eiu.edu
+  number_educ: 1
+  education1: B.S. Chemistry, 2025, EIU
+  education2: 
+  education3:
+  education4:
+
 - name: Akizia Aguilar
   photo: Akizia_Aguilar.jpg
   info: Non-oxidative Coupling of Methane on Metal Clusters
@@ -28,42 +38,3 @@
   education3:
   education4:  
 
-- name: Lauren Hendershot
-  photo: Lauren_Hendershot.jpg
-  info: Non-oxidative Coupling of Methane on Metal Clusters
-  email: lmhendershot@eiu.edu
-  number_educ: 1
-  education1: B.S. Chemistry, 2024, EIU
-  education2:
-  education3:
-  education4:
-
-- name: Mark Boyd
-  photo: Mark Boyd.jpg
-  info: Non-oxidative Coupling of Methane on Metal Clusters
-  email: mmboyd3@eiu.edu
-  number_educ: 1
-  education1: B.A. Chemistry, 2024, EIU
-  education2:
-  education3:
-  education4:
-
-- name: Sam Eccles
-  photo: Sam Eccles.jpg
-  info: Determining Thermal Decomposition Pathways of PFAS
-  email: sceccles@eiu.edu
-  number_educ: 1
-  education1: B.S. Chemistry, 2024, EIU
-  education2:
-  education3:
-  education4:
-
-- name: Jack Ebinger
-  photo: Jack Ebinger.jpg
-  info: Determining Thermal Decomposition Pathways of PFAS
-  email: jeebinger2@eiu.edu
-  number_educ: 1
-  education1: B.S. Chemistry, 2024, EIU
-  education2:
-  education3:
-  education4:
