--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,9 @@
-- date: 8. Jan. 2024
+date: 3. June 2024
+  headline: "Would like to welcome a new undergraduate researcher to the group, George Kacos."
+date: 8. Jan. 2024
   headline: "Would like to welcome a two new undergraduate researchers to the group, Akizia Aguilar and Genevieve Biberdorf."  
+- date: 15. May 2023
+  headline: "Lauren, Sam, and Jack graduated with their BS in Chemistry. Mark graduated with his BA in Chemistry. Both Sam and Lauren will be joining EIU as Master's students in the Fall. Congratulations to everyone."
 - date: 6. Nov. 2023
   headline: "Jack Ebinger won the Wolfram Outstanding Student Presentation award at the 8th Annual ECI ACS Undergraduate Research Conference for his poster titled: Decoding the Pyrolysis of Perfluorooctanoic Acid (PFOA): A Computational Nanoreactor Approach. <img src='/images/newspic/Jack_ECI.jpg' class='img-responsive' style='max-width: 192px' />"
 - date: 30. Aug. 2023
