--- a/_data/M_students.yml
+++ b/_data/M_students.yml
@@ -8,12 +8,22 @@
 #  education3:
 #  education4:
 
-- name: "This could be you !"
-  photo: TCBU.png
-  info: Contact Dr. Pellizzeri for more info
-  email: spellizzeri@eiu.edu
-  number_educ: 0
-  education1:
-  education2:
+- name: Lauren Hendershot
+  photo: Lauren_Hendershot.jpg
+  info: Non-oxidative Coupling of Methane on Metal Clusters
+  email: lmhendershot@eiu.edu
+  number_educ: 2
+  education1: B.S. Chemistry, 2024, EIU
+  education2: M.S. Chemistry,  Starting 2024, EIU
+  education3:
+  education4:
+  
+- name: Sam Eccles
+  photo: Sam Eccles.jpg
+  info: Determining Thermal Decomposition Pathways of PFAS
+  email: sceccles@eiu.edu
+  number_educ: 2
+  education1: B.S. Chemistry, 2024, EIU
+  education2: M.S. Chemistry,  Starting 2024, EIU
   education3:
   education4:
