--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -9,7 +9,7 @@
 #  education4:
 
 - name: George Kacos
-  photo: George Kacos.jpg
+  photo: George_Kacos.jpg
   info: Determining Thermal Decomposition Pathways of PFAS
   email: gkacos@eiu.edu
   number_educ: 1
