--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,6 @@
-date: 3. June 2024
+- date: 3. June 2024
   headline: "Would like to welcome a new undergraduate researcher to the group, George Kacos."
-date: 8. Jan. 2024
+- date: 8. Jan. 2024
   headline: "Would like to welcome a two new undergraduate researchers to the group, Akizia Aguilar and Genevieve Biberdorf."  
 - date: 15. May 2023
   headline: "Lauren, Sam, and Jack graduated with their BS in Chemistry. Mark graduated with his BA in Chemistry. Both Sam and Lauren will be joining EIU as Master's students in the Fall. Congratulations to everyone."
