--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 19. Oct. 2024
-  headline: "George Kacos won the East Central Illinois ACS Outstanding Poster Presentation award at the 9th Annual ECI ACS Undergraduate Research Conference for his poster titled: Multifaceted Computational Approach to Study the Thermal Decomposition of PFOA. <img src='/images/newspic/George_ECI.jpg' class='img-responsive' style='max-width: 192px' />"
+  headline: "George Kacos won the East Central Illinois ACS Outstanding Poster Presentation award at the 9th Annual ECI ACS Undergraduate Research Conference for his poster titled: Multifaceted Computational Approach to Study the Thermal Decomposition of PFOA. <img src='/images/newspic/George_ECI.png' class='img-responsive' style='max-width: 192px' />"
 - date: 3. June 2024
   headline: "Would like to welcome a new undergraduate researcher to the group, George Kacos."
 - date: 8. Jan. 2024
