--- a/_data/M_students.yml
+++ b/_data/M_students.yml
@@ -14,7 +14,7 @@
   email: lmhendershot@eiu.edu
   number_educ: 2
   education1: B.S. Chemistry, 2024, EIU
-  education2: M.S. Chemistry,  Starting 2024, EIU
+  education2: M.S. Chemistry, 2026, EIU
   education3:
   education4:
   
@@ -24,6 +24,6 @@
   email: sceccles@eiu.edu
   number_educ: 2
   education1: B.S. Chemistry, 2024, EIU
-  education2: M.S. Chemistry,  Starting 2024, EIU
+  education2: M.S. Chemistry, 2026, EIU
   education3:
   education4:
