--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -87,4 +87,13 @@
   education2:
   education3:
   education4:
-  
+
+- name: Akizia Aguilar
+  photo: Akizia_Aguilar.jpg
+  info: Non-oxidative Coupling of Methane on Metal Clusters
+  email: aaaguilar3@eiu.edu
+  number_educ: 1
+  education1: B.S. Biological Sciences, 2027, EIU
+  education2:
+  education3:
+  education4:  
