--- a/_data/pictures_Leiden.yml
+++ b/_data/pictures_Leiden.yml
@@ -23,3 +23,9 @@
 
 - title: Ryan Wang at the 7th East Central IL ACS Undergraduate Research Conference, November 2023.
   image: 20221112_095533.jpg
+
+- title: Spring 2024 Graduation.
+  image: Graduation_Spring24.png
+
+- title: Summer 2024 Research Group.
+  image: Summer_24_Group_Picture.png
