--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -9,7 +9,7 @@
 #  education4:
 
 - name: Preston Siewert
-  photo: 
+  photo: rock.jpg
   info: Determining Thermal Decomposition Pathways of PFAS
   semesters: Spring 2025
   number_educ: 2
