--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -11,6 +11,7 @@
 - name: Genevieve Biberdorf
   photo: Genevieve_Biberdorf.jpg
   info: Determining Thermal Decomposition Pathways of PFAS
+  semesters: Spring 2024 - Current
   email: glbiberdorf@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2026, EIU
@@ -22,6 +23,7 @@
   photo: Caityln_Wattleworth.png
   info: Adsorption of disinfection byproducts on carbon surfaces
   email: cmwattleworth@eiu.edu
+  semesters: Spring 2025 - Current
   number_educ: 1
   education1: B.S. Biological Sciences, 2027, EIU
   education2:
@@ -32,6 +34,7 @@
   photo: Noah_Kubbs.png
   info: Non-oxidative Coupling of Methane on Metal Clusters
   email: nskubbs@eiu.edu
+  semesters: Spring 2025 - Current
   number_educ: 1
   education1: B.S. Chemistry, 2026, EIU
   education2:
@@ -42,6 +45,7 @@
   photo: Charlie_Stauffer.png
   info: Non-oxidative Coupling of Methane on Metal Clusters
   email: crstauffer@eiu.edu
+  semesters: Summer 2025 - Current
   number_educ: 1
   education1: B.S. Chemistry, 2026, EIU
   education2:
@@ -51,6 +55,7 @@
   photo: Clayton_Carey.png
   info: Non-oxidative Coupling of Methane on Metal Clusters
   email: crstauffer@eiu.edu
+  semesters: Summer 2025
   number_educ: 1
   education1: B.S. Chemistry, 2029, EIU
   education2:
