--- a/_data/M_students.yml
+++ b/_data/M_students.yml
@@ -12,6 +12,7 @@
   photo: Lauren_Hendershot.jpg
   info: Non-oxidative Coupling of Methane on Metal Clusters
   email: lmhendershot@eiu.edu
+  semesters: Spring 2025 - Current
   number_educ: 2
   education1: B.S. Chemistry, 2024, EIU
   education2: M.S. Chemistry, 2026, EIU
@@ -22,6 +23,7 @@
   photo: Sam Eccles.jpg
   info: Determining Thermal Decomposition Pathways of PFAS
   email: sceccles@eiu.edu
+  semesters: Spring 2025 - Current
   number_educ: 2
   education1: B.S. Chemistry, 2024, EIU
   education2: M.S. Chemistry, 2026, EIU
